[package]
name = "ayuyan"
version = "0.1.0"
edition = "2021"
authors = ["OverzealousLotus"]


[dependencies]
dashmap = "5.5.0"
dotenvy = "0.15.7"
poise = "0.5.5"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"
tinyvec = "1.6.0"

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["macros", "rt-multi-thread"]

[profile.release]
lto = true
