[package]
name = "ayuyan"
version = "0.1.0"
edition = "2021"
authors = ["OverzealousLotus"]


[dependencies]
dashmap = "6.1.0"
dotenvy = "0.15.7"
poise = "0.6.1"
tinyrand = "0.5.0"
tinyrand-std = "0.5.0"

[dependencies.tokio]
version = "1.29.1"
default-features = false
features = ["macros", "rt-multi-thread"]

[dependencies.tinyvec]
version = "1.6.0"
features = ["alloc"]

[profile.release]
lto = true
